# agentx

./: .gitignore  A2A_ADVANCED_FEATURES_REPORT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  GITIGNORE_README.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  README_CN.md  TEST_RESULTS_SUMMARY.md  notepad  notepad1  notepad2  notepad3  notepad4  plan1.md  plan2.md  plan3.md  实施总结.md
crates/agentx-a2a/: Cargo.toml  README.md
crates/agentx-a2a/src/: agent_card.rs  capability.rs  client.rs  encryption.rs  error.rs  lib.rs  message.rs  monitoring.rs  monitoring_dashboard.rs  protocol.rs  protocol_engine.rs  security.rs  server.rs  streaming.rs
crates/agentx-a2a/src/actors/: metrics_actor.rs  mod.rs  protocol_actor.rs  registry_actor.rs  router_actor.rs  security_actor.rs  supervisor_actor.rs
crates/agentx-a2a/tests/: a2a_performance_tests.rs  a2a_protocol_tests.rs  actor_integration_tests.rs  basic_a2a_tests.rs  enhanced_monitoring_tests.rs  integration_tests.rs  monitoring_tests.rs  performance_tests.rs  real_network_performance_tests.rs  security_monitoring_tests.rs  security_tests.rs  streaming_tests.rs
crates/agentx-cluster/: Cargo.toml
crates/agentx-cluster/src/: autoscaler.rs  cluster_state.rs  config.rs  error.rs  health_checker.rs  lib.rs  load_balancer.rs  node_manager.rs  service_discovery.rs
crates/agentx-cluster/tests/: basic_cluster_tests.rs  cluster_integration_tests.rs  cluster_management_tests.rs  cluster_tests.rs  config_tests.rs  integration_tests.rs  simple_tests.rs  unit_tests.rs
crates/agentx-core/: Cargo.toml
crates/agentx-core/src/: advanced_monitoring.rs  cicd_pipeline.rs  cloud_native.rs  debug_diagnostics.rs  developer_ecosystem.rs  distributed_tracing.rs  error_recovery.rs  helm_charts.rs  lib.rs  performance_analyzer.rs  performance_benchmarks.rs  plugin_marketplace.rs  protocol_compat.rs  real_network_benchmarks.rs
crates/agentx-core/tests/: cloud_native_tests.rs  developer_tools_tests.rs  integration_tests.rs
crates/agentx-grpc/: Cargo.toml  build.rs
crates/agentx-grpc/proto/: a2a_service.proto  agent_registry.proto  agentx_plugin.proto  plugin_service.proto
crates/agentx-grpc/src/: converter.rs  error.rs  grpc_client.rs  grpc_server.rs  lib.rs  plugin_bridge.rs  plugin_manager.rs
crates/agentx-grpc/src/services/: converter.rs  mod.rs
crates/agentx-grpc/tests/: a2a_grpc_integration_tests.rs  converter_tests.rs  grpc_communication_tests.rs  grpc_integration_tests.rs  plugin_bridge_tests.rs  real_plugin_system_tests.rs  simple_grpc_tests.rs
crates/agentx-http/: Cargo.toml  README.md
crates/agentx-http/examples/: simple_server.rs
crates/agentx-http/src/: config.rs  docs.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  response.rs  server.rs
crates/agentx-http/src/handlers/: agents.rs  health.rs  messages.rs  metrics.rs  mod.rs  openapi.rs  tasks.rs
crates/agentx-http/tests/: api_tests.rs  performance_tests.rs  simple_api_tests.rs
crates/agentx-router/: Cargo.toml
crates/agentx-router/src/: cache.rs  error.rs  lib.rs  metrics.rs  router.rs  strategy.rs
crates/agentx-router/tests/: performance_tests.rs
crates/agentx-sdk/: Cargo.toml
crates/agentx-sdk/src/: adapter.rs  builder.rs  client.rs  config_manager.rs  framework.rs  framework_manager.rs  lib.rs  lifecycle.rs  message_converter.rs  plugin.rs  security.rs  server.rs  utils.rs
crates/agentx-sdk/tests/: framework_adapter_tests.rs  integration_tests.rs  plugin_system_tests.rs
docs/: community-building.md  documentation-index-cn.md  documentation-index.md  index.md  plugin-development-guide.md  quick-navigation.md
docs/api/: api-reference-cn.md  api-reference.md
docs/architecture/: system-architecture-cn.md  system-architecture.md
docs/deployment/: deployment-guide-cn.md  deployment-guide.md
docs/development/: development-guide-cn.md  development-guide.md
docs/plugins/: plugin-development-cn.md  plugin-development.md
examples/: a2a_advanced_features_demo.rs  a2a_complete_demo.rs  a2a_enhanced_demo.rs  a2a_protocol_demo.rs  agentx_ecosystem_demo.rs  autogen_plugin_demo.rs  grpc_plugin_bridge_demo.rs  grpc_plugin_demo.rs  http_server_demo.rs  langchain_plugin_demo.rs  mastra_plugin_demo.rs  plugin_sdk_demo.rs
plugins/autogen/: Cargo.toml
plugins/autogen/src/: main.rs
plugins/langchain/: Cargo.toml
plugins/langchain/python/: agentx_langchain_service.py
plugins/langchain/src/: config.rs  error.rs  langchain_adapter.rs  main.rs  python_bridge.rs
plugins/mastra/: Cargo.toml
plugins/mastra/src/: main.rs
tests/: a2a_performance_tests.rs  error_recovery_integration_tests.rs  multi_framework_plugin_tests.rs  performance_benchmarks.rs
