[package]
name = "agentx-a2a"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Actor系统
actix.workspace = true
actix-web.workspace = true
actix-rt.workspace = true

# 异步运行时
tokio.workspace = true
tokio-stream.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 日志
tracing.workspace = true

# 时间处理
chrono.workspace = true

# UUID生成
uuid.workspace = true

# 异步trait
async-trait.workspace = true

# HTTP客户端
reqwest.workspace = true

# 正则表达式
regex = "1.0"

# Base64编码
base64 = "0.21"

# OpenAPI文档生成（可选）
utoipa = { version = "4.0", optional = true }

[features]
default = []
utoipa = ["dep:utoipa"]

[dev-dependencies]
tokio-test = "0.4"
mockall.workspace = true

[[example]]
name = "a2a_enhanced_demo_lib"
path = "../../examples/a2a_enhanced_demo.rs"

[[example]]
name = "a2a_advanced_features_demo_lib"
path = "../../examples/a2a_advanced_features_demo.rs"

[[example]]
name = "a2a_complete_demo_lib"
path = "../../examples/a2a_complete_demo.rs"
