[package]
name = "agentx-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# gRPC和序列化
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# 异步运行时
tokio.workspace = true
tokio-stream.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 日志
tracing.workspace = true

# 时间处理
chrono.workspace = true

# UUID生成
uuid.workspace = true

# 异步trait
async-trait.workspace = true

# A2A协议支持
agentx-a2a = { path = "../agentx-a2a" }

# gRPC反射
tonic-reflection = "0.10"

# 随机数生成
rand = "0.8"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
mockall.workspace = true

[[example]]
name = "grpc_plugin_demo"
path = "../../examples/grpc_plugin_demo.rs"
