[package]
name = "agentx-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# A2A协议支持
agentx-a2a = { path = "../agentx-a2a" }

# Web框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "timeout"] }

# 异步运行时
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }

# 序列化
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# HTTP客户端
reqwest = { workspace = true, features = ["json"] }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { workspace = true, features = ["serde"] }

# UUID生成
uuid = { workspace = true, features = ["v4", "serde"] }

# OpenAPI文档生成
utoipa = { version = "4.0", features = ["axum_extras", "chrono", "uuid"], optional = true }
utoipa-swagger-ui = { version = "6.0", features = ["axum"], optional = true }

# 验证
validator = { version = "0.16", features = ["derive"] }

# 配置管理
config = "0.13"

# 状态管理
dashmap = "5.5"

[[bin]]
name = "agentx-http"
path = "src/main.rs"

[features]
default = ["utoipa"]
utoipa = ["dep:utoipa", "dep:utoipa-swagger-ui", "agentx-a2a/utoipa"]

[dev-dependencies]
tokio-test = "0.4"
tower-test = "0.4"
hyper = { version = "1.0", features = ["full"] }
